--- a/sass/_core.scss
+++ b/sass/_core.scss
@@ -60,6 +60,11 @@
     padding:10px 5px !important;
 }
 
+#div_pageContainer {
+    position: relative;
+    overflow: hidden;
+}
+
 #div_pageContainer .iconlist{
     background-color : rgba(255,255,255,0);
     height : 130px;
